# cafce

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.claude/skills/commit-message/: SKILL.md
.claude/skills/design-doc/: SKILL.md
.claude/skills/rust-conventions/: SKILL.md
.claude/skills/rust-conventions/references/: read_world_rust_part.md
doc/: 20250727_cache_key_files.md  20251231_s3_connect_design.md  20260101_aws_integration_test_design.md  llm_design_doc_template.md
doc/design/: 20250727_cache_key_files_design.md  20260101_aws_integration_test_design.md  20260721_probe_and_key_design.md
doc/gitlab/: cache_key_files.md
src/: cache_key.rs  env.rs  error.rs  file_matcher.rs  hash_calculator.rs  lib.rs  main.rs  s3_client.rs  setting.rs
test/sample/: setting,toml  setting.toml
tests/: integration_test.rs
